Second try to fix font problem on IE6 RTL high-contrast mode, for left/right/menu buttons on scrolling !TabController, fixes #11159.
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@22192 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/dijit.css
+++ b/themes/dijit.css
@@ -1904,8 +1904,8 @@ div.dijitTabDisabled, .dj_ie div.dijitTabDisabled {
 	display:inline !important;
 	visibility:hidden;
 }
-.dj_ie6 .dijitToggleButtonIconChar {
-	font-family: "Arial Unicode MS";	/* otherwise the checkmark appears as a box */
+.dj_ie6 .dijitToggleButtonIconChar, .dj_ie6 .tabStripButton .dijitButtonText {
+	font-family: "Arial Unicode MS";	/* otherwise the a11y character (checkmark, arrow, etc.) appears as a box */
 }
 .dijit_a11y .dijitToggleButtonChecked .dijitToggleButtonIconChar {
 	display: inline !important; /* In high contrast mode, display the check symbol */
